k8s/web-prod/overlays/apps/ingress-delete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-core-ingress
$patch: delete
